CP4Auto/CleanInstallation_ODM/posttasks/es-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bai-network-policy-elastic-client
spec:
  podSelector:
    matchLabels:
      component: bai-ibm-dba-ek-client
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  policyTypes:
  - Ingress
